# word-histogram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  draft.py  improved_histogram_wrapper.py  out.txt  out.xls  pyproject.toml  requirements.txt  setup.py  simple_histogram_wrapper.py  test.txt  text.txt  word histogram.py
docs/: README.md  usage.md
examples/: sample.txt  simple_example.py
src/word_histogram/: __init__.py  __main__.py  cli.py  core.py  exporters.py  visualization.py
src/word_histogram/data/: __init__.py  sample.txt
tests/: test_word_histogram.py
