[project]
name = "word-histogram"
version = "0.1.0"
description = "A Python tool for analyzing word frequency in text files"
readme = "README.md"
requires-python = ">=3.10.4"
authors = [{ name = "Word Histogram Team" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "cycler==0.11.0",
    "fonttools==4.31.2",
    "idna==3.3",
    "kiwisolver==1.4.2",
    "matplotlib==3.5.1",
    "numpy==1.22.3",
    "packaging==21.3",
    "Pillow==9.0.1",
    "pyparsing==3.0.7",
    "python-dateutil==2.8.2",
    "six==1.16.0",
    "openpyxl==3.1.2",
]

[project.optional-dependencies]
wordcloud = ["wordcloud>=1.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
word-histogram = "word_histogram.cli:main"

[project.urls]
"Homepage" = "https://github.com/username/word-histogram"
"Bug Tracker" = "https://github.com/username/word-histogram/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest]
testpaths = ["tests"]
